<resources>
    <string name="app_name">Calculadora</string>

<!--    <string name="sqr_root">&#8730;</string>-->
    <string name="sqr_root">sqrt</string>
    <string name="sum_operator">+</string>
    <string name="sub_operator">-</string>
<!--    <string name="div_operator">&#247;</string>-->
    <string name="div_operator">/</string>
<!--    <string name="mut_operator">&#10005;</string>-->
    <string name="mut_operator">*</string>
</resources>