<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplayCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="8dp"
        android:text=""
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btNumber1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayCalc" />

    <Button
        android:id="@+id/btNumber4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNumber1" />

    <Button
        android:id="@+id/btNumber7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNumber4" />

    <Button
        android:id="@+id/btNumber3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="3"
        app:layout_constraintStart_toEndOf="@+id/btNumber2"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayCalc" />

    <Button
        android:id="@+id/btNumber9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="9"
        app:layout_constraintStart_toEndOf="@+id/btNumber8"
        app:layout_constraintTop_toBottomOf="@+id/btNumber6" />

    <Button
        android:id="@+id/btNumber6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="6"
        app:layout_constraintStart_toEndOf="@+id/btNumber5"
        app:layout_constraintTop_toBottomOf="@+id/btNumber3" />

    <Button
        android:id="@+id/btNumber2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="2"
        app:layout_constraintStart_toEndOf="@+id/btNumber1"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayCalc" />

    <Button
        android:id="@+id/btNumber5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="5"
        app:layout_constraintStart_toEndOf="@+id/btNumber4"
        app:layout_constraintTop_toBottomOf="@+id/btNumber2" />

    <Button
        android:id="@+id/btNumber8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="8"
        app:layout_constraintStart_toEndOf="@+id/btNumber7"
        app:layout_constraintTop_toBottomOf="@+id/btNumber5" />

    <Button
        android:id="@+id/btNumber0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/btLeftParenthesis"
        app:layout_constraintTop_toBottomOf="@+id/btNumber8" />

    <Button
        android:id="@+id/btRightParenthesis"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text=")"
        app:layout_constraintStart_toEndOf="@+id/btNumber0"
        app:layout_constraintTop_toBottomOf="@+id/btNumber9" />

    <Button
        android:id="@+id/btLeftParenthesis"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="("
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNumber7" />

    <Button
        android:id="@+id/btDiv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/div_operator"
        app:layout_constraintStart_toEndOf="@+id/btRightParenthesis"
        app:layout_constraintTop_toBottomOf="@+id/btSub" />

    <Button
        android:id="@+id/btSub"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/sub_operator"
        app:layout_constraintStart_toEndOf="@+id/btNumber9"
        app:layout_constraintTop_toBottomOf="@+id/btDot" />

    <Button
        android:id="@+id/btDot"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/mut_operator"
        app:layout_constraintStart_toEndOf="@+id/btNumber6"
        app:layout_constraintTop_toBottomOf="@+id/btSum" />

    <Button
        android:id="@+id/btSum"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/sum_operator"
        app:layout_constraintStart_toEndOf="@+id/btNumber3"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayCalc" />

    <Button
        android:id="@+id/btSqrt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sqr_root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btSum"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayCalc" />

    <Button
        android:id="@+id/btEqual"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="="
        app:layout_constraintStart_toEndOf="@+id/btDot"
        app:layout_constraintTop_toBottomOf="@+id/btSqrt" />

</androidx.constraintlayout.widget.ConstraintLayout>